<resources>
    <string name="app_name">IRFR</string>
    <string name="loading_data">Загрузка тестов…</string>
    <string name="unzip">Распаковка тестов…</string>
    <string name="txt_exam">Экзамен</string>
    <string name="txt_result">Результаты</string>
    <string name="txt_rules">Правила</string>
    <string name="txt_irfr">ИРФР</string>
    <string name="get_discount">Получить скидку</string>
    <string name="txt_share">Поделиться</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_main">Главная</string>
    <string name="start_test_exam">начать экзамен</string>
    <string name="teee">С чего начинается процедура эмиссии дополнительных акций?</string>
    <string name="btnSkip">Пропустить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="finish_exam">завершение экзамена</string>
    <string name="you_are_sure">Вы уверены, что хотите завершить?</string>
    <string name="txt_point">баллов</string>
    <string name="txt_fio">ФИО</string>
    <string name="txt_tel">Телефон</string>
    <string name="txt_email">e-mail</string>
    <string name="txt_error">Ошибка</string>
    <string name="txt_error_repeat">Произошла ошибка загрузки тестов, Вы желаете повторить загрузку?</string>
    <string name="you_point">Вы набрали %s</string>
    <string name="your_discount">Ваша скидка состовляет %d руб.</string>
    <string name="rub">%d руб.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discount_1_1">1. Пройдите тест в режиме Экзамена, чтобы получить по 1 баллу за каждый правильно отвеченный вопрос.</string>
    <string name="discount_2">2. Поделитесь с друзьями информацией о программе и получите по 25 баллов за каждую соц.сеть.</string>
    <string name="you_are_sure2">Внимание, при переходе в почтовый клиент для отправки результатов будут очищены все ваши результаты, вы уверены?</string>
    <string name="send_email">Отправка результатов</string>
    <string name="exam_mode">Выберите режим, в котором Вы хотите пройти экзамен:\nТестовый режим - по всем вопросам или по отдельным главам экзамена без ограничения времени.\nРежим экзамена - 80 вопросов, 120 минут.</string>
    <string name="title_exam_mode">Выбор режима экзамена</string>
    <string name="exam_str">режим экзамена</string>
    <string name="test_str">тестовый режим</string>
    <string name="test_download_completed">Тесты успешно скачаны</string>
    <string name="txt_continue">Продолжить?</string>
    <string name="txt_continue_text">Вы не закончили прохождение экзамена в прошлый раз</string>
    <string name="cancel">Отмена</string>
    <string name="str_continue">Продолжить</string>
    <string name="str_subject">Вопросы по темам</string>
    <string name="txt_error_test">Мои ошибки</string>
    <string name="send_result">Отправка результатов</string>
    <string name="error_title">Просмотр ошибок</string>
    <string name="str_delete">Вы точно хотите удалить данный результат?</string>
</resources>
