<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fragment.MainFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mini_logo"
        android:layout_height="170dp"/>

    <TextView
        android:id="@+id/btnMainNav"
        android:layout_width="match_parent"
        android:layout_below="@+id/logo"
        android:text="@string/txt_main"
        style="@style/TextView"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnExamNav"
        android:layout_width="match_parent"
        android:layout_below="@+id/btnMainNav"
        android:text="@string/txt_exam"
        style="@style/TextView"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnResultNav"
        style="@style/TextView"
        android:text="@string/txt_result"
        android:layout_below="@id/btnExamNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnRulesNav"
        android:layout_below="@id/btnResultNav"
        style="@style/TextView"
        android:text="@string/txt_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnIrfrNav"
        android:layout_below="@id/btnRulesNav"
        style="@style/TextView"
        android:text="@string/txt_irfr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>